--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@ footer {
 
 @media screen and (max-width: 479px) {
     #title {
-        font-size: 11pt;
+        display: none;
     }
 
     #footerCopyright {
